--- a/app/demo.html
+++ b/app/demo.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script type="module" src='demo.js'></script>
+  <script type="module" src='navigate.js'></script>
 
 </head>
 
